src/App.css
/* ... */
#faq-light {
  font-size: 1.75rem;
  color: white;
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: bold;
}

#faq-dark {
  font-size: 1.75rem;
  color: rgb(19, 10, 10);
  font-family: "Open Sans Condensed", sans-serif;
}

#faq2 {
  font-size: 1.5em;
  color: rgb(201, 2, 2);
  font-family: "Share Tech", sans-serif;
}

@media only screen and (max-width: 1500px) {
  #motherShip {
    width: 100%;
    zoom: 75%;
    display: flex;
  }
}

@media only screen and (max-width: 1000px) {
  .site-logo-Dark {
    font-size: 1.75rem;
  }

  .site-logo-Light {
    font-size: 1.75rem;
  }

  #news-headlines {
    width: 10em;
  }

  #news-img {
    height: 90px;
    transition-property: all;
    transition-duration: 1000ms;
    transition-timing-function: ease-in-out;
  }

  ul li {
    font-size: 1.5em;
  }

  p {
    font-size: 0.5em;
  }

  #chartHolder2 {
    width: 600px;
    height: 350px;
    display: block;
  }

  #chartHolder3 {
    width: 600px;
    height: 250px;
    display: block;
  }

  #stockBackgroundDiv {
    font-size: 1em;
    display: block;
  }

  #chartCenterDiv {
    display: flex;
    margin-left: 0%;
  }
}

@media only screen and (max-width: 700px) {
  #indexChartContainer {
    width: 550px;
    display: block;
  }

  .site-logo-Dark {
    margin-right: 20%;
  }

  .site-logo-Light {
    margin-right: 20%;
  }

  #nav-link-style li {
    font-size: 1rem;
  }
  .home-div {
    display: block;
  }
  ul li {
    font-size: 1em;
  }

  ul li:hover {
    font-size: 1em;
  }

  p {
    font-size: 0.5em;
  }

  #chartHolder2 {
    width: 600px;
    height: 400px;
    display: block;
  }

  #chartHolder3 {
    width: 600px;
    height: 370px;
    display: block;
  }

  #stockBackgroundDiv {
    font-size: 1em;
    display: block;
  }

  #chartCenterDiv {
    display: block;

    justify-content: center;
  }

  #news-headlines {
    width: 10em;
  }

  #home-left-content {
  }

  #news-img {
    height: 50px;
  }
}

@media only screen and (max-width: 700px) {
  #Top-Gainers-Container {
    width: 450px;
    margin-left: 0%;
    margin-right: 0%;

    margin-top: 15%;
  }

  #Top-Gainers-Header {
    color: white;
    display: block;
    font-size: 1.5rem;
    width: 100%;
    font-family: "Big Shoulders Display", cursive;

    border-radius: 15%;
  }

  #Top-Gainers-Header2 {
    margin-left: 10%;
  }

  #Top-Gainers-Header3 {
    margin-right: 10%;
  }

  #Cube-3D-Container {
    margin-right: 45%;
    opacity: 0.65;
  }
  #indexChartCenter {
    display: block;
    justify-content: center;
  }
  .dowChartDisplay-Dark {
    width: 550px;
    height: 280px;
  }

  #news-headlines {
    width: 7em;
    margin-right: 15px;
  }

  .dowChartDisplay-Light {
    width: 475px;
    height: 260px;
    margin-left: 80px;
  }
  #Header-Title {
    width: 15em;
    font-size: 1em;
  }

  ul {
    justify-content: center;
    color: rgb(252, 233, 231);
  }

  #input3 {
    width: 300px;
  }

  ul li {
    font-size: 0.9em;
    margin-right: 10px;
  }

  #react-logo {
    opacity: 0;
  }

  p {
    font-size: 0.5em;
  }

  #chartHolder2 {
    width: 350px;
    height: 200px;
    display: block;
    justify-content: center;
    margin-left: 65px;
    border: 0px groove black;
  }

  #chartHolder3 {
    width: 350px;
    height: 200px;
    display: block;
    margin-left: 65px;
    justify-content: center;
  }

  #stockBackgroundDiv {
    font-size: 1em;
    display: block;
  }

  #chartCenterDiv {
    display: block;
    margin-left: 0%;
  }
}

